--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/normalize.css" type="text/css">
+<!--     <link rel="stylesheet" href="css/normalize.css" type="text/css"> -->
     <link rel="stylesheet" href="css/styles.css" type="text/css">
     <title>Custom Contact Form</title>
   </head>
