--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Custom Contact Form</title>
   </head>
   <body>
+    <script>
+console.log("FOOBAR");
+    </script>
     <form>
       <div class="buttons">
         <button type="button" id="button1">Sign Up</button>
